--- a/src/Loggers/MassTransit.Log4NetIntegration/MassTransit.Log4NetIntegration.csproj
+++ b/src/Loggers/MassTransit.Log4NetIntegration/MassTransit.Log4NetIntegration.csproj
@@ -32,6 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Release\MassTransit.Log4NetIntegration.xml</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net" Condition="'$(TargetFrameworkVersion)' == 'v3.5'">
