a bit of changes to use rmq rather than MSMQ for runtime services

--- a/src/MassTransit.RuntimeServices/App.config
+++ b/src/MassTransit.RuntimeServices/App.config
@@ -23,11 +23,11 @@
   </hibernate-configuration>
   <appSettings>
     <add key="HealthServiceEnabled" value="false" />
-    <add key="HealthServiceDataUri" value="msmq://localhost/mt_health" />
+    <add key="HealthServiceDataUri" value="rabbitmq://localhost/mt_health" />
     <add key="SubscriptionServiceEnabled" value="true" />
-    <add key="SubscriptionServiceUri" value="msmq://localhost/mt_subscriptions" />
+    <add key="SubscriptionServiceUri" value="rabbitmq://localhost/mt_subscriptions" />
     <add key="TimeoutServiceEnabled" value="true" />
-    <add key="TimeoutServiceDataUri" value="msmq://localhost/mt_timeout" />
+    <add key="TimeoutServiceDataUri" value="rabbitmq://localhost/mt_timeout" />
   </appSettings>
   <connectionStrings>
     <add name="MassTransit"
