--- a/src/MassTransit.RuntimeServices/MassTransit.RuntimeServices.csproj
+++ b/src/MassTransit.RuntimeServices/MassTransit.RuntimeServices.csproj
@@ -145,6 +145,10 @@
       <Project>{6F90867C-E092-4EDC-B3DE-600D39DF0335}</Project>
       <Name>MassTransit.Transports.Msmq</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Transports\MassTransit.Transports.RabbitMq\MassTransit.Transports.RabbitMq.csproj">
+      <Project>{6C7149D7-4D97-45DF-A05D-61EC7374491D}</Project>
+      <Name>MassTransit.Transports.RabbitMq</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
