--- a/src/MassTransit.FSharpInterop/NLog.config
+++ b/src/MassTransit.FSharpInterop/NLog.config
@@ -10,6 +10,6 @@
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="console" />
+    <logger name="*" minlevel="Trace" writeTo="console" />
   </rules>
 </nlog>
