--- a/src/MassTransit.FSharpInterop/MassTransit.FSharpInterop.fsproj
+++ b/src/MassTransit.FSharpInterop/MassTransit.FSharpInterop.fsproj
@@ -38,7 +38,10 @@
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" Condition="!Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft F#\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
   <ItemGroup>
+    <Compile Include="SampleMessage.fs" />
     <Compile Include="NamespaceLess.fs" />
+    <Compile Include="ProblematicOverloads.fs" />
+    <None Include="Tests.fsx" />
     <None Include="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
